2008-08-04  Alan Modra  <amodra@bigpond.net.au>

	* dwarf2dbg.c: Remove superfluous forward function declarations.
	(DWARF2_FORMAT): Add section arg.
	(out_header): New function, split out from..
	(out_debug_line): ..here.
	(out_debug_aranges): Use out_header.
	(out_debug_abbrev): Add info_seg and line_seg args.  Use
	DW_FORM_data8 (for DW_AT_stmt_list) if line_seg is 64-bit.
	(out_debug_info): Use out_header.  Output 8 byte DW_AT_stmt_list
	if line_seg is 64-bit.
	(dwarf2_finish): Adjust out_debug_abbrev call.
	* config/tc-mips.h (DWARF2_FORMAT, mips_dwarf2_format): Add sec arg.
	* config/tc-mips.c (mips_dwarf2_format): Likewise.

2008-08-04  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (POTFILES.in): Set LC_ALL=C.
	* Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.

2008-08-01  Peter Bergner  <bergner@vnet.ibm.com>

	* config/tc-ppc.c (parse_cpu): Rename altivec_or_spe to retain_flags.
	Handle -mvsx and -mpower7.
	(md_show_usage): Document -mpower7 and -mvsx.
	* doc/as.texinfo (Target PowerPC): Document -mvsx.
	* doc/c-ppc.texi (PowerPC-Opts): Document -mvsx and -mpower7.

2008-07-31  Peter Bergner  <bergner@vnet.ibm.com>

	* config/tc-ppc.c (parse_cpu) <power6>: Accept Altivec instructions.
	<cell>: Likewise.

2008-07-30  Michael J. Eager  <eager@eagercon.com>

	* config/tc-ppc.c (parse_cpu): Separate handling of -m403/405.
	(md_show_usage): Likewise.

2008-07-30  Alan Modra  <amodra@bigpond.net.au>

	* messages.c, symbols.c, write.c: Silence gcc warnings.

2008-07-28  Ineiev  <ineiev@yahoo.co.uk>

	* config/tc-i386.c (operand_type_check): Warning fix.

2008-07-26  Michael Eager <eager@eagercon.com>

	* doc/as.texinfo: Add description of single-precision attribute.

2008-07-24  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-parse.y (asm_1): Error if plain symbol is used
	as load/store offset.

2008-07-22  Chao-ying Fu  <fu@mips.com>

	* config/tc-mips.c (mips_ip): Reset s to argsStart.

2008-07-22  Jie Zhang  <jie.zhang@analog.com>
