@@ -1,3 +1,10 @@
+2008-08-05  Alan Modra  <amodra@bigpond.net.au>
+
+	PR gas/6656
+	* dwarf2dbg.c (dwarf2_directive_file): Disable gas generated
+	debug info if we see compiler generated debug info.
+	(dwarf2_directive_loc): Likewise.  Remove redundant debug_type test.
+
 2008-08-04  Alan Modra  <amodra@bigpond.net.au>
 
 	* dwarf2dbg.c: Remove superfluous forward function declarations.
